syntax = "proto3";

package com.framework.akka.router;

option java_package = "com.framework.akka.router.proto";
option java_outer_classname = "ExchangeProtocol";
option java_multiple_files = true;

message ActorBroadcast {
    uint32 opcode = 1;
    repeated uint64 userIds = 2;
    bytes message = 3;
}

message ActorNotify {
    uint32 opcode = 1;
    uint64 userId = 2;
    bytes message = 3;
}

message ActorResponse {
    bytes message = 1;
}

message ActorWorld {
    uint32 opcode = 1;
    bytes message = 2;
}

message ApiRequest {
    // 接口域
    uint32 opcode = 1;
    // 接口版本
    string version = 2;
    // 参数列表
    repeated bytes args = 3;
    // 登录用户uid
    uint64 loginUserId = 4;
}

message ApiRequestForward {
    // 重定向的域
    uint32 forward = 1;
    // 接口域
    uint32 opcode = 2;
    // 接口版本
    string version = 3;
    // 参数列表
    repeated bytes args = 4;
}

message MemberOfflineEvent {
    uint64 logoutUserId = 1;
}

message MemberOnlineEvent {
    uint64 loginUserId = 1;
}

message RouterRegistration {
    uint32 routerId = 1;
}